solved overflow problem

--- a/style.css
+++ b/style.css
@@ -300,9 +300,11 @@ button:hover{
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
     0px 4px 6px -2px rgba(0, 0, 0, 0.05);
   transition: transform ease-in-out 0.2s;
+  display: none;
 }
 
 .show.toast {
+  display:block;
   transform: translate(50%, 0);
 }
 
@@ -328,5 +330,11 @@ button:hover{
   }
   .email-container .filed {
     width: 300px;
+  }
+}
+
+@media screen and (max-height: 700px){
+  body{
+    overflow: scroll;
   }
 }
